[package]
name = "lpoxide"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
